fix request response to generic